paas/k8s-manifests/kyverno/require-non-root.yaml
# Kubernetes manifest for lab or hosted deploy
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - devsecops-paas
                - paas
                - simple-app
                - harbor
                - jenkins
                - cicd
                - monitoring
                - kube-system
                - kyverno
                - ingress-nginx
      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  runAsNonRoot: true
