paas/k8s-manifests/kyverno/require-signed-images.yaml
# Kubernetes manifest for lab or hosted deploy
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
                - Deployment
                - StatefulSet
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - cicd
                - devsecops-paas
                - paas
                - simple-app
                - harbor
                - jenkins
                - monitoring
                - kube-system
                - kyverno
                - ingress-nginx
                - dependency-track
      verifyImages:
        - imageReferences:
            - "*"
          imageRegistryCredentials:
            allowInsecureRegistry: true
            secrets:
              - harbor-regcred
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      REPLACE_WITH_REAL_COSIGN_PUBLIC_KEY
                      -----END PUBLIC KEY-----
                    rekor:
                      ignoreTlog: true
                    ctlog:
                      ignoreSCT: true
